--- a/index.html
+++ b/index.html
@@ -1,58 +1,62 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <link rel="stylesheet" type="text/css" href="css/style.css">
-
-        <title>My Student Bio</title>
-
-        <style>
-            li {
-                
-                float:left;
-            }
-            
-            li a {
-                padding:20px;
-                text-align: center;
-            }
-
-            .my_profile_pic {
-                width: 25%;
-                height: 50%;
-            }
-            #m1234 {
-
-                width: 50px;
-            }
-        </style>
-    </head>
+<head>
+    <title>About | Alan Shalkey</title>
+    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css"  href="assets/style.css" />
+</head>
 <body>
+    <nav class="navbar navbar-expand-lg">
+        <a class="navbar-brand" id='navbar-brand-override'>Alan Shalkey</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div>
+          <ul class ="navbar-nav">
+            <li class="nav-item active">
+              <a class="nav-link" href="index.html">About</a>
+            </li> 
+            <li class="nav-item">
+              <a class="nav-link" href="portfolio.html">Portfolio</a>
+            </li> 
+            <li class="nav-item">
+              <a class="nav-link" href="contact.html">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </nav>
 
-    <h1>Student Bio</h1>
+      <div class='container-bg'>
+        <div class='container'>
+          <div class='row'>
+              <div class='col-xs-12 col-md-8' id='core'>
+                    <h2>About Me</h2>
+                    <img class ='img-fluid' id='profilePic' src="https://media.licdn.com/dms/image/C5603AQGLkCPC5nU75Q/profile-displayphoto-shrink_200_200/0?e=1531353600&v=beta&t=cFSW0rteL23I36mqQCQiTQ_MO8JIvJdhnymBkP9iy24">
+                    <p>I grew up in York, Pennsylvania for most of my childhood.  After graduating high school I attended the University of Pittsburgh where
+                        I studied Philosophy and Psychology.  While studying in college I began working part-time in the hospitality industry primarily as a server 
+                        in fine dining establishments.  After graduating with my Bachelor's I continued to work in the hospitality industry while looking for a job
+                        to start buidling my career off of.  
+                    </p>
+                    <p>After working in customer service roles for most of my working years, I've decided to take up learning techincal skills to improve my job prospects.  
+                        I came to Colorado moved by the desire to furthering my education and the ultimate goal of moving into a career that challenges
+                        me and provides me with a sense of fulfillment.
+                    </p>
+                    <p>I currently do Technical Support work for a software company in Denver, Colorado and am attending a full stack web development certificate program
+                        offered through the University of Denver.  I enjoy practicing Muay Thai in my free time.
+                    </p>
+              </div>
+          </div>
+        </div>
+      </div>
 
-    <h2>Alan Shalkey</h2>
-
-    <img id="m1234" class="my_profile_pic" src="https://media.licdn.com/dms/image/C5603AQGLkCPC5nU75Q/profile-displayphoto-shrink_200_200/0?e=1531353600&v=beta&t=cFSW0rteL23I36mqQCQiTQ_MO8JIvJdhnymBkP9iy24">
-
-    <p>I like stuff</p>
-
-    <h2>Contact Info</h2>
-
-        <ul>
-            <li><strong>Email:</strong><a href="mailto:alanshalkey@gmail.com">alanshalkey@gmail.com</a></li>
-            <li><strong>Github:</strong><a href="https://github.com/ashalkey" target="_blank">My github account</a></li>
-            <li><strong>Linkedin:</strong><a href="https://www.linkedin.com/in/alan-shalkey-39590bb7/" target="_blank">Alan Shalkey Linkedin</a></li>
-            <li><strong>Phone:</strong><a href="tel:+1 310-621-2512">310-621-2512</a></li>
-        </ul>
-
-    <div class="container">
-
-        <section id="main-bio"></section>
-
-        <section id="contact-info"></section>
-
-        <section id="bio-image"></section>
-
-    </div>
+      <footer class='footer'>
+          <div class='container'> 
+                <span>
+                    <strong>Email: </strong><a href="mailto:alanshalkey@gmail.com">alanshalkey@gmail.com</a></li>
+                    <strong>GitHub: </strong><a href="https://github.com/ashalkey" target="_blank">Alan Shalkey's GitHub</a></li>
+                    <strong>Linkedin: </strong><a href="https://www.linkedin.com/in/alan-shalkey-39590bb7/" target="_blank">Alan Shalkey</a></li>
+                </span>  
+          </div>
+      </footer>
 </body>
 </html>
