--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>About | Alan Shalkey</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css"  href="assets/style.css" />
+    <link rel="stylesheet" type="text/css"  href="css/assets/BSstyle.css" />
 </head>
 <body>
     <nav class="navbar navbar-expand-lg">
