--- a/portfolio.html
+++ b/portfolio.html
@@ -3,7 +3,7 @@
 <head>
     <title>Portfolio | Alan Shalkey</title>
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css"  href="assets/style.css" />
+    <link rel="stylesheet" type="text/css"  href="assets/css/BSstyle.css" />
 </head>
 
 <body>
@@ -32,8 +32,8 @@
                     <div class='col-xs-12 col-md-8' id='core'>
                             <h2>Portfolio</h2>
                             <div class='imgContainer'>
-                                <img src="https://loremflickr.com/320/240" alt="kitty" />
-                                <h3>The Adorable Apex Predator</h3>
+                                <a href='ashalkey.github.io/TriviaGame'><img src="assets/images/MMA-Silhouette.png" alt="MMA-Silhouette" /></a>
+                                <h3>Martial Arts Trivia Game</h3>
                             </div>
                             <div class='imgContainer'>
                                 <img src="https://loremflickr.com/320/240/dog" alt='dog'/>
