--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" type="text/css"  href="assets/css/BSstyle.css" />
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand" id='navbar-brand-override'>Alan Shalkey</a>
+    <!-- <nav class="navbar navbar-expand-lg">
+        <a class="navbar-brand offset-lg-3 offset-sm-0" id='navbar-brand-override'>Alan Shalkey</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div>
-          <ul class ="navbar-nav">
+        <div class='collapse navbar-collapse offset-md-4' id='myNavbar'>
+          <ul class ="nav navbar-nav">
             <li class="nav-item active">
               <a class="nav-link" href="index.html">About</a>
             </li> 
@@ -24,12 +24,25 @@
             </li>
           </ul>
         </div>
+      </nav> -->
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand offset-lg-3 offset-sm-0" id='navbar-brand-override'>Navbar</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse offset-md-4" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-item nav-link" href="index.html">About</a>
+            <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
+            <a class="nav-item nav-link" href="contact.html">Contact</a>
+          </div>
+        </div>
       </nav>
 
       <div class='container-bg'>
         <div class='container'>
           <div class='row'>
-              <div class='col-xs-12 col-md-8' id='core'>
+              <div class='col-md-8 offset-md-1' id='core'>
                     <h2>About Me</h2>
                     <img class ='img-fluid' id='profilePic' src="https://media.licdn.com/dms/image/C5603AQGLkCPC5nU75Q/profile-displayphoto-shrink_200_200/0?e=1531353600&v=beta&t=cFSW0rteL23I36mqQCQiTQ_MO8JIvJdhnymBkP9iy24">
                     <p>I grew up in York, Pennsylvania for most of my childhood.  After graduating high school I attended the University of Pittsburgh where
