--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         </div>
       </nav> -->
       <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand offset-lg-3 offset-sm-0" id='navbar-brand-override'>Navbar</a>
+        <a class="navbar-brand offset-lg-3 offset-sm-0" id='navbar-brand-override'>Alan Shalkey</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
