adding GifTastic to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,7 +30,7 @@
                                 <h3>Martial Arts Trivia Game</h3>
                             </div>
                             <div class='imgContainer'>
-                                <img src="https://loremflickr.com/320/240/dog" alt='dog'/>
+                                <a href='ashalkey.github.io/GifTastic'><img src="assets/images/MartialArtsBackground.jpg" alt='GifTastic'/></a>
                                 <h3>Man's Best Friend</h3>
                             </div>  
                             <div class='imgContainer'>
