--- a/portfolio.html
+++ b/portfolio.html
@@ -31,7 +31,7 @@
                             </div>
                             <div class='imgContainer'>
                                 <a href='ashalkey.github.io/GifTastic'><img src="assets/images/MartialArtsBackground.jpg" alt='GifTastic'/></a>
-                                <h3>Man's Best Friend</h3>
+                                <h3>GifTastic</h3>
                             </div>  
                             <div class='imgContainer'>
                                 <img src='https://loremflickr.com/320/240/stars' alt='stars'>
