adding pts to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -34,8 +34,8 @@
                                 <h3>GifTastic</h3>
                             </div>  
                             <div class='imgContainer'>
-                                <img src='https://loremflickr.com/320/240/stars' alt='stars'>
-                                <h3>A Stroll Among the Stars</h3>
+                                <a href='ashalkey.github.io/TransportationScheduler'><img src='assets/images/PublicTransportationSchedulerBG.PNG' alt='Transportation Scheduler'></a>
+                                <h3>Transportation Scheduler</h3>
                             </div>          
                             <div class='imgContainer'>
                                 <img src='https://loremflickr.com/320/240/nature' alt='nature'>
