updating index.html file

--- a/index.html
+++ b/index.html
@@ -51,11 +51,10 @@
                         in fine dining establishments.  After graduating with my Bachelor's I continued to work in the hospitality industry while looking for a job
                         to start buidling my career off of.  
                     </p>
-                    <p>After working in customer service roles for most of my working years, I've decided to take up learning techincal skills to improve my job prospects.  
-                        I came to Colorado moved by the desire to furthering my education and the ultimate goal of moving into a career that challenges
+                    <p>I came to Colorado moved by the desire to further my education and with the ultimate goal of moving into a career that challenges
                         me and provides me with a sense of fulfillment.
                     </p>
-                    <p>I currently do Technical Support work for a software company in Denver, Colorado and am attending a full stack web development certificate program
+                    <p>I currently am attending a part-time full stack web development certificate program
                         offered through the University of Denver.  I enjoy practicing Muay Thai in my free time.
                     </p>
               </div>
