styling changes on portfolio images, adding links to github code

--- a/portfolio.html
+++ b/portfolio.html
@@ -28,24 +28,25 @@
                             <div class='imgContainer'>
                                 <a href='ashalkey.github.io/TriviaGame'><img src="assets/images/MMA-Silhouette.png" alt="MMA-Silhouette" /></a>
                                 <h3>Martial Arts Trivia Game</h3>
+                                <h2><a href='https://github.com/ashalkey/TriviaGame'>check out the code</a></h2>
                             </div>
                             <div class='imgContainer'>
                                 <a href='ashalkey.github.io/GifTastic'><img src="assets/images/MartialArtsBackground.jpg" alt='GifTastic'/></a>
                                 <h3>GifTastic</h3>
+                                <h2><a href='https://github.com/ashalkey/GifTastic'>check out the code</a></h2>
                             </div>  
                             <div class='imgContainer'>
                                 <a href='ashalkey.github.io/TransportationScheduler'><img src='assets/images/PublicTransportationSchedulerBG.PNG' alt='Transportation Scheduler'></a>
                                 <h3>Transportation Scheduler</h3>
+                                <h2><a href='https://github.com/ashalkey/Firebase-Transportation-Scheduler'>check out the code</a></h2>
                             </div>          
                             <div class='imgContainer'>
-                                <img src='https://loremflickr.com/320/240/nature' alt='nature'>
-                                <h3>Nature Walks</h3>
-                            </div>
-                            <div class='imgContainer'>
-                                <img src='https://loremflickr.com/320/240/bug' alt='bugs'>
-                                <h3>A Bug's World</h3>
+                                <a href='ashalkey.github.io/WordGuessGame'><img src='assets/images/BruceLee.jpg' alt='Word Guess Game'></a>
+                                <h3>Hangman Game</h3>
+                                <h2><a href='https://github.com/ashalkey/Word-Guess-Game'>check out the code</a></h2>
                             </div>
                     </div>
+
             </div>
         </div>
 
