adding resume, changing contact page slightly

--- a/contact.html
+++ b/contact.html
@@ -27,17 +27,9 @@
 
             <div class='col-xs-12 col-md-8' id='core'>
                     <h2>Contact</h2>
-
-                    <form action="mailto:someone@example.com" method="post" enctype="text/plain">
-                        Name:<br>
-                        <input type="text" name="name"><br>
-                        E-mail:<br>
-                        <input type="text" name="mail"><br>
-                        Message:<br>
-                        <input id='messageField' type="text" name="comment" size="100"><br><br>
-                        <input id='sendButton' type="submit" value="Send">
-                        </form>
-                          </div> 
+                    <p>Email: alanshalkey@gmail.com</p>
+                    <p>Phone Number: 310-621-2512</p>
+                    <a href='assets/Resume.pdf'>My Resume</a>
             </div>
         </div>
     </div>
