adding profile pic to images folder

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           <div class='row'>
               <div class='col-md-8 offset-md-1' id='core'>
                     <h2>About Me</h2>
-                    <img class ='img-fluid' id='profilePic' src="https://media.licdn.com/dms/image/C5603AQGLkCPC5nU75Q/profile-displayphoto-shrink_200_200/0?e=1531353600&v=beta&t=cFSW0rteL23I36mqQCQiTQ_MO8JIvJdhnymBkP9iy24">
+                    <img class ='img-fluid' id='profilePic' src="assets/images/ProfilePic.jpg">
                     <p>I grew up in York, Pennsylvania for most of my childhood.  After graduating high school I attended the University of Pittsburgh where
                         I studied Philosophy and Psychology.  While studying in college I began working part-time in the hospitality industry primarily as a server 
                         in fine dining establishments.  After graduating with my Bachelor's I continued to work in the hospitality industry while looking for a job
