adding liri to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -45,6 +45,11 @@
                                 <h3>Hangman Game</h3>
                                 <h2><a href='https://github.com/ashalkey/Word-Guess-Game'>check out the code</a></h2>
                             </div>
+                            <div class='imgContainer'>
+                                <img src='assets/images/LIRI.png'>
+                                <h3>LIRI node application</h3>
+                                <h2><a href='https://github.com/ashalkey/liri-node-app'>check out the code</a></h2>
+                            </div>
                     </div>
 
             </div>
