adding bamazon app to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -47,8 +47,13 @@
                             </div>
                             <div class='imgContainer'>
                                 <img src='assets/images/LIRI.png'>
-                                <h3>LIRI node application</h3>
+                                <h3>LIRI node app</h3>
                                 <h2><a href='https://github.com/ashalkey/liri-node-app'>check out the code</a></h2>
+                            </div>
+                            <div class='imgContainer'>
+                                <img src='assets/images/demo.gif'>
+                                <h3>Bamazon node app</h3>
+                                <h2><a href='https://github.com/ashalkey/bamazon-app'>check out the code</a></h2>
                             </div>
                     </div>
 
