--- a/portfolio.html
+++ b/portfolio.html
@@ -55,6 +55,11 @@
                                 <h3>Bamazon node app</h3>
                                 <h2><a href='https://github.com/ashalkey/bamazon-app'>check out the code</a></h2>
                             </div>
+                            <div class='imgContainer'>
+                                <img src='assets/images/ffBG.PNG'>
+                                <h3>Friend Finder</h3>
+                                <h2><a href='https://github.com/ashalkey/friend-finder'>check out the code</a></h2>
+                            </div>
                     </div>
 
             </div>
