--- a/portfolio.html
+++ b/portfolio.html
@@ -60,6 +60,11 @@
                                 <h3>Friend Finder</h3>
                                 <h2><a href='https://github.com/ashalkey/friend-finder'>check out the code</a></h2>
                             </div>
+                            <div class='imgContainer'>
+                                <img src='assets/images/eatDaBurger.PNG'>
+                                <h3>Eat Da Burger!</h3>
+                                <h2><a href='https://github.com/ashalkey/eat-da-burger'>check out the code</a></h2>
+                            </div>
                     </div>
 
             </div>
