--- a/index.html
+++ b/index.html
@@ -1,75 +1,204 @@
 <!DOCTYPE html>
 <html>
+
 <head>
-    <title>About | Alan Shalkey</title>
-    <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css"  href="assets/css/BSstyle.css" />
+    <title>Alan Shalkey | Full Stack Web Developer, C# Developer</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
+    <link rel="stylesheet" type="text/css" href="assets/css/UPstyle.css" />
 </head>
+
 <body>
-    <!-- <nav class="navbar navbar-expand-lg">
-        <a class="navbar-brand offset-lg-3 offset-sm-0" id='navbar-brand-override'>Alan Shalkey</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class='collapse navbar-collapse offset-md-4' id='myNavbar'>
-          <ul class ="nav navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="index.html">About</a>
-            </li> 
-            <li class="nav-item">
-              <a class="nav-link" href="portfolio.html">Portfolio</a>
-            </li> 
-            <li class="nav-item">
-              <a class="nav-link" href="contact.html">Contact</a>
-            </li>
-          </ul>
+    <div class="container-fluid">
+        <div class="row bgimg">
+            <div class="col-lg-12">
+                <div class="text-center">
+                    <img class="img-responsive rounded-circle profile-pic" src="assets/images/ProfilePic.jpg">
+                    <h1>Alan Shalkey</h1>
+                    <h3>Full Stack Web Developer | C# Developer</h3>
+                    <ul class="list-inline">
+                        <li class="list-inline-item"><a href="https://www.linkedin.com/in/alan-shalkey-39590bb7/">LinkedIn</a></li>|
+                        <li class="list-inline-item"><a href="https://github.com/ashalkey">Github</a></li>|
+                        <li class="list-inline-item"><a href="assets/Resume.pdf">My Resume</a></li>
+                    </ul>
+                </div>
+            </div>
         </div>
-      </nav> -->
-
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand offset-lg-3 offset-sm-0" id='navbar-brand-override'>Alan Shalkey</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse offset-md-4" id="navbarNavAltMarkup">
-          <div class="navbar-nav">
-            <a class="nav-item nav-link" href="index.html">About</a>
-            <a class="nav-item nav-link" href="portfolio.html">Portfolio</a>
-            <a class="nav-item nav-link" href="contact.html">Contact</a>
-          </div>
+        <div class="row item-row border border-success">
+                <div class="col-md-5 offset-md-1">
+                    <h2>Lava Survivor</h2>
+                    <p>This game is a 3D platformer where you must shoot projectiles in order to move platforms to collect all of the objects.
+                        You must choose wisely and quickly need to avoid being consumed by the rising lava!
+                    </p>
+                </div>
+                <div class="col-md-4 offset-md-1">
+                        <iframe width="654" height="380" src="https://www.youtube.com/embed/brCyfAqC_F8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+    
+                </div>
+                <div class="col-md-12 text-center">
+                    <img class="logo-img" src="assets/images/csharp.png">
+                    <img class="logo-img" src="assets/images/unity.png">
+                </div>
+            </div>
+        <div class="row item-row border border-success">
+            <div class="col-md-5 offset-md-1">
+                <img class="rounded-circle project-pic" src="assets/images/eatDaBurger.PNG">
+            </div>
+            <div class="col-md-4 offset-md-1">
+                <h2>Eat-Da-Burger!</h2>
+                <p>This is a full stack web application, where you are able to enter burgers you would like to serve up and choose to devour any available burgers.
+                    This project is hosted on heroku so many people can interact with the application while the data persists for others to view.
+                </p>
+            </div>
+            <div class="col-md-12 text-center">
+                <img class="logo-img" src="assets/images/html5-css-javascript-logos.png">
+                <img class="logo-img" src="assets/images/nodejs.png">
+                <img class="logo-img" src="assets/images/handlebars.png">
+                <img class="logo-img" src="assets/images/bootstrap.png">
+                <img class="logo-img" src="assets/images/heroku.png">
+                <img class="logo-img" src="assets/images/sql.png">
+            </div>
+            <div class="col-md-6 offset-md-5">
+                <button type="button" class="btn btn-lg btn-success centered-button" onclick="location.href = 'https://ancient-plains-63089.herokuapp.com/'">Devour
+                    some burgers!</button>
+            </div>
         </div>
-      </nav>
+        <div class="row item-row border border-success">
+            <div class="col-md-5 offset-md-1">
+                <h2>Friend Finder</h2>
+                <p>This is a full stack web application where your answers to a survey are calculated to find possible friends who share the same
+                    interests as you and have also completed the survey.  The project is hosted on heroku, making it available to various users
+                    and allowing their profiles to persist.
+                </p>
+            </div>
+            <div class="col-md-4 offset-md-1">
+                <img class="rounded project-pic" src="assets/images/ffBG.PNG">
 
-      <div class='container-bg'>
-        <div class='container'>
-          <div class='row'>
-              <div class='col-md-8 offset-md-1' id='core'>
-                    <h2>About Me</h2>
-                    <img class ='img-fluid' id='profilePic' src="assets/images/ProfilePic.jpg">
-                    <p>I grew up in York, Pennsylvania for most of my childhood.  After graduating high school I attended the University of Pittsburgh where
-                        I studied Philosophy and Psychology.  While studying in college I began working part-time in the hospitality industry primarily as a server 
-                        in fine dining establishments.  After graduating with my Bachelor's I continued to work in the hospitality industry while looking for a job
-                        to start buidling my career off of.  
-                    </p>
-                    <p>I came to Colorado moved by the desire to further my education and with the ultimate goal of moving into a career that challenges
-                        me and provides me with a sense of fulfillment.
-                    </p>
-                    <p>I currently am attending a part-time full stack web development certificate program
-                        offered through the University of Denver.  I enjoy practicing Muay Thai in my free time.
-                    </p>
-              </div>
-          </div>
+            </div>
+            <div class="col-md-12 text-center">
+                <img class="logo-img" src="assets/images/html5-css-javascript-logos.png">
+                <img class="logo-img" src="assets/images/nodejs.png">
+                <img class="logo-img" src="assets/images/jquery.png">
+                <img class="logo-img" src="assets/images/handlebars.png">
+                <img class="logo-img" src="assets/images/bootstrap.png">
+                <img class="logo-img" src="assets/images/heroku.png">
+            </div>
+            <div class="col-md-6 offset-md-5">
+                <button type="button" class="btn btn-lg btn-success centered-button" onclick="location.href = 'https://whispering-wave-77834.herokuapp.com/'">Find
+                    some Friends!</button>
+            </div>
         </div>
-      </div>
+        <div class="row item-row border border-success">
+            <div class="col-md-5 offset-md-1">
+                <img class="rounded project-pic" src="assets/images/demo.gif">
+            </div>
+            <div class="col-md-4 offset-md-1">
+                <h2>Bamazon</h2>
+                <p>You can use this node application to send queries to a database using SQL.
+                    After running the application you will be shown a table filled with information 
+                    conatained in the products table and can choose which item to purchase. 
+                    Once you decide on an item, choose a quantity so that your total can be calculated.</p>
+            </div>
+            <div class="col-md-12 text-center">
+                <img class="logo-img" src="assets/images/javascript.png">
+                <img class="logo-img" src="assets/images/nodejs.png">
+                <img class="logo-img" src="assets/images/sql.png">
+            </div>
+        </div>
+        <div class="row item-row border border-success">
+            <div class="col-md-5 offset-md-1">
+                <h2>LIRI - Language Interpretation and Recognition Interface</h2>
+                <p>There are various commands in this node application which allow you to send AJAX requests to a 
+                    news api to retrieve the top headlines, the OMDB api to look up movie information by the title of
+                    the film, the Spotify API to retrieve song information, and to run a command from the command line
+                    in order to read data from a file.</p>
+            </div>
+            <div class="col-md-4 offset-md-1">
+                <img class="rounded project-pic" src="assets/images/LIRI.png">
 
-      <footer class='footer'>
-          <div class='container'> 
-                <span>
-                    <strong>Email: </strong><a href="mailto:alanshalkey@gmail.com">alanshalkey@gmail.com</a></li>
-                    <strong>GitHub: </strong><a href="https://github.com/ashalkey" target="_blank">Alan Shalkey's GitHub</a></li>
-                    <strong>Linkedin: </strong><a href="https://www.linkedin.com/in/alan-shalkey-39590bb7/" target="_blank">Alan Shalkey</a></li>
-                </span>  
-          </div>
-      </footer>
+            </div>
+            <div class="col-md-12 text-center">
+                <img class="logo-img" src="assets/images/javascript.png">
+                <img class="logo-img" src="assets/images/nodejs.png">
+            </div>
+        </div>
+        <div class="row item-row border border-success">
+            <div class="col-md-5 offset-md-1">
+                <img class="rounded project-pic" src="assets/images/PublicTransportationSchedulerBG.PNG">
+            </div>
+            <div class="col-md-4 offset-md-1">
+                <h2>Public Transportation Scheduler</h2>
+                <p>This project uses Firebase in order to log train schedules which will stay up to date when the 
+                    page is refreshed.  The moment.js library was particularly useful in converting times to formats which
+                    made the calculations easy to execute and output the data in whatever format you like. </p>
+            </div>
+            <div class="col-md-12 text-center">
+                <img class="logo-img" src="assets/images/html5-css-javascript-logos.png">
+                <img class="logo-img" src="assets/images/jquery.png">
+                <img class="logo-img" src="assets/images/momentjs.png">
+                <img class="logo-img" src="assets/images/firebase.png">
+            </div>
+            <div class="col-md-6 offset-md-5">
+                <button type="button" class="btn btn-lg btn-success centered-button" onclick="location.href = 'https://ashalkey.github.io/TransportationScheduler.html'">Pursue
+                    Punctuality!</button>
+            </div>
+        </div>
+        <div class="row item-row border border-success">
+            <div class="col-md-5 offset-md-1">
+                <h2>Giftastic!</h2>
+                <p>By sending AJAX requests to the the GIPHY API, you can create buttons that can load up some of your favorite GIFs! </p>
+            </div>
+            <div class="col-md-4 offset-md-1">
+                <img class="rounded project-pic" src="assets/images/MartialArtsBackground.jpg">
+
+            </div>
+            <div class="col-md-12 text-center">
+                <img class="logo-img" src="assets/images/html5-css-javascript-logos.png">
+                <img class="logo-img" src="assets/images/jquery.png">
+            </div>
+            <div class="col-md-6 offset-md-5">
+                <button type="button" class="btn btn-lg btn-success centered-button" onclick="location.href = 'https://ashalkey.github.io/GifTastic'">Retrieve some GIFs!</button>
+            </div>
+        </div>
+        <div class="row item-row border border-success">
+            <div class="col-md-5 offset-md-1">
+                <img class="rounded project-pic" src="assets/images/MMA-Silhouette.png">
+            </div>
+            <div class="col-md-4 offset-md-1">
+                <h2>Martial Arts Origins Trivia Game</h2>
+                <p>This game will test your knowledge of various styles of martial arts from around the world.  You
+                    have a limited amount of time in order to answer all of the questions, but you'll be able to keep
+                    resetting the game until you've gained enough knowledge to complete the game!</p>
+            </div>
+            <div class="col-md-12 text-center">
+                <img class="logo-img" src="assets/images/html5-css-javascript-logos.png">
+                <img class="logo-img" src="assets/images/jquery.png">
+            </div>
+            <div class="col-md-6 offset-md-5">
+                <button type="button" class="btn btn-lg btn-success centered-button" onclick="location.href = 'https://ashalkey.github.io/TriviaGame'">Prove your knowledge!</button>
+            </div>
+        </div>
+        <div class="row item-row border border-success">
+            <div class="col-md-5 offset-md-1">
+                <h2>Martial Arts Movies Hangman</h2>
+                <p>This game tests your knowledge of well known martial arts films.  You can keep track of each film that you've
+                    guessed correctly, but be careful as you'll lose all of the correct films you've guessed if you are unable
+                    to guess a film before you run out of attempts!
+                </p>
+            </div>
+            <div class="col-md-4 offset-md-1">
+                <img class="rounded project-pic" src="assets/images/BruceLee.jpg">
+
+            </div>
+            <div class="col-md-12 text-center">
+                <img class="logo-img" src="assets/images/html5-css-javascript-logos.png">
+            </div>
+            <div class="col-md-6 offset-md-5">
+                    <button type="button" class="btn btn-lg btn-success centered-button" onclick="location.href = 'https://ashalkey.github.io/WordGuessGame'">Guess all of the films!</button>
+                </div>
+        </div>
+
+    </div>
 </body>
+
 </html>
