modifying hangmang description slightly

--- a/index.html
+++ b/index.html
@@ -182,8 +182,7 @@
             <div class="col-md-5 offset-md-1">
                 <h2>Martial Arts Movies Hangman</h2>
                 <p>This game tests your knowledge of well known martial arts films.  You can keep track of each film that you've
-                    guessed correctly, but be careful as you'll lose all of the correct films you've guessed if you are unable
-                    to guess a film before you run out of attempts!
+                    guessed correctly, but be careful to not run out of attempts!
                 </p>
             </div>
             <div class="col-md-4 offset-md-1">
