adding content, links to github repo for all projects

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <title>Alan Shalkey | Full Stack Web Developer, C# Developer</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
         crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Kanit:600|Rajdhani:600" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="assets/css/UPstyle.css" />
 </head>
 
@@ -25,30 +26,41 @@
             </div>
         </div>
         <div class="row item-row border border-success">
-                <div class="col-md-5 offset-md-1">
-                    <h2>Lava Survivor</h2>
-                    <p>This game is a 3D platformer where you must shoot projectiles in order to move platforms to collect all of the objects.
-                        You must choose wisely and quickly need to avoid being consumed by the rising lava!
-                    </p>
-                </div>
-                <div class="col-md-4 offset-md-1">
-                        <iframe width="654" height="380" src="https://www.youtube.com/embed/brCyfAqC_F8" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-    
-                </div>
-                <div class="col-md-12 text-center">
-                    <img class="logo-img" src="assets/images/csharp.png">
-                    <img class="logo-img" src="assets/images/unity.png">
-                </div>
+            <div class="col-md-5 offset-md-1">
+                <h2>Lava Survivor</h2>
+                <p>This game is a 3D platformer where you must shoot projectiles in order to move platforms to collect all
+                    of the objects. You must choose wisely and quickly need to avoid being consumed by the rising lava!
+                </p>
+                <h4>Technologies Used</h4>
+                <p>C# and the Unity Game Engine. World machine was also used to create the terrain that contains the level,
+                    while most other assets were readily availabe from the asset store.
+                </p>
+                <h5><a href="https://github.com/ashalkey/Lava-Survivor">Check out the code or clone the project to download
+                        the .exe file to play the game here!</a></h5>
             </div>
+            <div class="col-md-4 offset-md-1">
+                <iframe width="654" height="380" src="https://www.youtube.com/embed/brCyfAqC_F8" frameborder="0" allow="autoplay; encrypted-media"
+                    allowfullscreen></iframe>
+
+            </div>
+            <div class="col-md-12 text-center">
+                <img class="logo-img" src="assets/images/csharp.png">
+                <img class="logo-img" src="assets/images/unity.png">
+            </div>
+        </div>
         <div class="row item-row border border-success">
             <div class="col-md-5 offset-md-1">
                 <img class="rounded-circle project-pic" src="assets/images/eatDaBurger.PNG">
             </div>
             <div class="col-md-4 offset-md-1">
                 <h2>Eat-Da-Burger!</h2>
-                <p>This is a full stack web application, where you are able to enter burgers you would like to serve up and choose to devour any available burgers.
-                    This project is hosted on heroku so many people can interact with the application while the data persists for others to view.
+                <p>This is a full stack web application, where you are able to enter burgers you would like to serve up and
+                    choose to devour any available burgers. This project is hosted on heroku so many people can interact
+                    with the application while the data persists for others to view.
                 </p>
+                <h4>Technologies Used</h4>
+                <p>HTML, CSS, JavaScript, Node.js, Handlebars.js, Bootstrap, Heroku, and SQL</p>
+                <h5><a href="https://github.com/ashalkey/eat-da-burger">Check out the code here!</a></h5>
             </div>
             <div class="col-md-12 text-center">
                 <img class="logo-img" src="assets/images/html5-css-javascript-logos.png">
@@ -59,17 +71,20 @@
                 <img class="logo-img" src="assets/images/sql.png">
             </div>
             <div class="col-md-6 offset-md-5">
-                <button type="button" class="btn btn-lg btn-success centered-button" onclick="location.href = 'https://ancient-plains-63089.herokuapp.com/'">Devour
-                    some burgers!</button>
+                <button type="button" class="btn btn-lg btn-success centered-button" onclick="location.href = 'https://ancient-plains-63089.herokuapp.com/'">Go
+                    to the deployed project!</button>
             </div>
         </div>
         <div class="row item-row border border-success">
             <div class="col-md-5 offset-md-1">
                 <h2>Friend Finder</h2>
-                <p>This is a full stack web application where your answers to a survey are calculated to find possible friends who share the same
-                    interests as you and have also completed the survey.  The project is hosted on heroku, making it available to various users
-                    and allowing their profiles to persist.
+                <p>This is a full stack web application where your answers to a survey are calculated to find possible friends
+                    who share the same interests as you and have also completed the survey. The project is hosted on heroku,
+                    making it available to various users and allowing their profiles to persist.
                 </p>
+                <h4>Technologies Used</h4>
+                <p>HTML, CSS, JavaScript, Node.js, jQuery, Handlebars.js, Bootstrap, Heroku</p>
+                <h5><a href="https://github.com/ashalkey/friend-finder">Check out the code here!</a></h5>
             </div>
             <div class="col-md-4 offset-md-1">
                 <img class="rounded project-pic" src="assets/images/ffBG.PNG">
@@ -84,8 +99,8 @@
                 <img class="logo-img" src="assets/images/heroku.png">
             </div>
             <div class="col-md-6 offset-md-5">
-                <button type="button" class="btn btn-lg btn-success centered-button" onclick="location.href = 'https://whispering-wave-77834.herokuapp.com/'">Find
-                    some Friends!</button>
+                <button type="button" class="btn btn-lg btn-success centered-button" onclick="location.href = 'https://whispering-wave-77834.herokuapp.com/'">Go
+                    to the deployed project!</button>
             </div>
         </div>
         <div class="row item-row border border-success">
@@ -94,10 +109,12 @@
             </div>
             <div class="col-md-4 offset-md-1">
                 <h2>Bamazon</h2>
-                <p>You can use this node application to send queries to a database using SQL.
-                    After running the application you will be shown a table filled with information 
-                    conatained in the products table and can choose which item to purchase. 
-                    Once you decide on an item, choose a quantity so that your total can be calculated.</p>
+                <p>You can use this node application to send queries to a database using SQL. After running the application
+                    you will be shown a table filled with information conatained in the products table and can choose which
+                    item to purchase. Once you decide on an item, choose a quantity so that your total can be calculated.</p>
+                <h4>Technologies Used</h4>
+                <p>JavaScript, Node.js, SQL</p>
+                <h5><a href="https://github.com/ashalkey/bamazon-app">Check out the code here!</a></h5>
             </div>
             <div class="col-md-12 text-center">
                 <img class="logo-img" src="assets/images/javascript.png">
@@ -108,10 +125,13 @@
         <div class="row item-row border border-success">
             <div class="col-md-5 offset-md-1">
                 <h2>LIRI - Language Interpretation and Recognition Interface</h2>
-                <p>There are various commands in this node application which allow you to send AJAX requests to a 
-                    news api to retrieve the top headlines, the OMDB api to look up movie information by the title of
-                    the film, the Spotify API to retrieve song information, and to run a command from the command line
-                    in order to read data from a file.</p>
+                <p>There are various commands in this node application which allow you to send AJAX requests to a news api
+                    to retrieve the top headlines, the OMDB api to look up movie information by the title of the film, the
+                    Spotify API to retrieve song information, and to run a command from the command line in order to read
+                    data from a file.</p>
+                <h4>Technologies Used</h4>
+                <p>Javascript, Node.js, Spotify API, NewsAPI, OMDB API</p>
+                <h5><a href="https://github.com/ashalkey/liri-node-app">Check out the code here!</a></h5>
             </div>
             <div class="col-md-4 offset-md-1">
                 <img class="rounded project-pic" src="assets/images/LIRI.png">
@@ -128,9 +148,12 @@
             </div>
             <div class="col-md-4 offset-md-1">
                 <h2>Public Transportation Scheduler</h2>
-                <p>This project uses Firebase in order to log train schedules which will stay up to date when the 
-                    page is refreshed.  The moment.js library was particularly useful in converting times to formats which
-                    made the calculations easy to execute and output the data in whatever format you like. </p>
+                <p>This project uses Firebase in order to log train schedules which will stay up to date when the page is
+                    refreshed. The moment.js library was particularly useful in converting times to formats which made the
+                    calculations easy to execute and output the data in whatever format you like. </p>
+                <h4>Technologies Used</h4>
+                <p>HTML, CSS, JavaScript, jQuery, Moment.js, Firebase</p>
+                <h5><a href="https://github.com/ashalkey/Firebase-Transportation-Scheduler">Check out the code here!</a></h5>
             </div>
             <div class="col-md-12 text-center">
                 <img class="logo-img" src="assets/images/html5-css-javascript-logos.png">
@@ -139,14 +162,18 @@
                 <img class="logo-img" src="assets/images/firebase.png">
             </div>
             <div class="col-md-6 offset-md-5">
-                <button type="button" class="btn btn-lg btn-success centered-button" onclick="location.href = 'https://ashalkey.github.io/TransportationScheduler.html'">Pursue
-                    Punctuality!</button>
+                <button type="button" class="btn btn-lg btn-success centered-button" onclick="location.href = 'https://ashalkey.github.io/TransportationScheduler.html'">Go to the deployed project!
+                </button>
             </div>
         </div>
         <div class="row item-row border border-success">
             <div class="col-md-5 offset-md-1">
                 <h2>Giftastic!</h2>
-                <p>By sending AJAX requests to the the GIPHY API, you can create buttons that can load up some of your favorite GIFs! </p>
+                <p>By sending AJAX requests to the the GIPHY API, you can create buttons that can load up some of your favorite
+                    GIFs! </p>
+                <h4>Technologies Used</h4>
+                <p>HTML, CSS, JavaScript, jQuery, GIPHY API</p>
+                <h5><a href="https://github.com/ashalkey/GifTastic">Check out the code here!</a></h5>
             </div>
             <div class="col-md-4 offset-md-1">
                 <img class="rounded project-pic" src="assets/images/MartialArtsBackground.jpg">
@@ -157,7 +184,7 @@
                 <img class="logo-img" src="assets/images/jquery.png">
             </div>
             <div class="col-md-6 offset-md-5">
-                <button type="button" class="btn btn-lg btn-success centered-button" onclick="location.href = 'https://ashalkey.github.io/GifTastic'">Retrieve some GIFs!</button>
+                <button type="button" class="btn btn-lg btn-success centered-button" onclick="location.href = 'https://ashalkey.github.io/GifTastic'">Go to the deployed project!</button>
             </div>
         </div>
         <div class="row item-row border border-success">
@@ -166,24 +193,31 @@
             </div>
             <div class="col-md-4 offset-md-1">
                 <h2>Martial Arts Origins Trivia Game</h2>
-                <p>This game will test your knowledge of various styles of martial arts from around the world.  You
-                    have a limited amount of time in order to answer all of the questions, but you'll be able to keep
-                    resetting the game until you've gained enough knowledge to complete the game!</p>
+                <p>This game will test your knowledge of various styles of martial arts from around the world. You have a
+                    limited amount of time in order to answer all of the questions, but you'll be able to keep resetting
+                    the game until you've gained enough knowledge to complete the game!</p>
+                <h4>Technologies Used</h4>
+                <p>HTML, CSS, JavaScript, jQuery</p>
+                <h5><a href="https://github.com/ashalkey/TriviaGame">Check out the code here!</a></h5>
+
             </div>
             <div class="col-md-12 text-center">
                 <img class="logo-img" src="assets/images/html5-css-javascript-logos.png">
                 <img class="logo-img" src="assets/images/jquery.png">
             </div>
             <div class="col-md-6 offset-md-5">
-                <button type="button" class="btn btn-lg btn-success centered-button" onclick="location.href = 'https://ashalkey.github.io/TriviaGame'">Prove your knowledge!</button>
+                <button type="button" class="btn btn-lg btn-success centered-button" onclick="location.href = 'https://ashalkey.github.io/TriviaGame'">Go to the deployed project!</button>
             </div>
         </div>
         <div class="row item-row border border-success">
             <div class="col-md-5 offset-md-1">
                 <h2>Martial Arts Movies Hangman</h2>
-                <p>This game tests your knowledge of well known martial arts films.  You can keep track of each film that you've
-                    guessed correctly, but be careful to not run out of attempts!
+                <p>This game tests your knowledge of well known martial arts films. You can keep track of each film that
+                    you've guessed correctly, but be careful to not run out of attempts!
                 </p>
+                <h4>Technologies Used</h4>
+                <p>HTML, CSS, JavaScript</p>
+                <h5><a href="https://github.com/ashalkey/Word-Guess-Game">Check out the code here!</a></h5>
             </div>
             <div class="col-md-4 offset-md-1">
                 <img class="rounded project-pic" src="assets/images/BruceLee.jpg">
@@ -193,8 +227,8 @@
                 <img class="logo-img" src="assets/images/html5-css-javascript-logos.png">
             </div>
             <div class="col-md-6 offset-md-5">
-                    <button type="button" class="btn btn-lg btn-success centered-button" onclick="location.href = 'https://ashalkey.github.io/WordGuessGame'">Guess all of the films!</button>
-                </div>
+                <button type="button" class="btn btn-lg btn-success centered-button" onclick="location.href = 'https://ashalkey.github.io/WordGuessGame'">Go to the deployed project!</button>
+            </div>
         </div>
 
     </div>
