working on responsiveness

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         </div>
         <div class="row item-row border border-success">
             <div class="col-md-5 offset-md-1">
-                <img class="rounded-circle project-pic img-responsive" src="assets/images/eatDaBurger.PNG">
+                <img class="rounded-circle project-pic img-fluid" src="assets/images/eatDaBurger.PNG">
             </div>
             <div class="col-md-4 offset-md-1">
                 <h2>Eat-Da-Burger!</h2>
@@ -88,7 +88,7 @@
                 <h5><a href="https://github.com/ashalkey/friend-finder">Check out the code here!</a></h5>
             </div>
             <div class="col-md-4 offset-md-1">
-                <img class="rounded project-pic img-responsive" src="assets/images/ffBG.PNG">
+                <img class="rounded project-pic img-fluid" src="assets/images/ffBG.PNG">
 
             </div>
             <div class="col-md-12 text-center">
@@ -106,7 +106,7 @@
         </div>
         <div class="row item-row border border-success">
             <div class="col-md-5 offset-md-1">
-                <img class="rounded project-pic img-responsive" src="assets/images/demo.gif">
+                <img class="rounded project-pic img-fluid" src="assets/images/demo.gif">
             </div>
             <div class="col-md-4 offset-md-1">
                 <h2>Bamazon</h2>
@@ -135,7 +135,7 @@
                 <h5><a href="https://github.com/ashalkey/liri-node-app">Check out the code here!</a></h5>
             </div>
             <div class="col-md-4 offset-md-1">
-                <img class="rounded project-pic img-responsive" src="assets/images/LIRI.png">
+                <img class="rounded project-pic img-fluid" src="assets/images/LIRI.png">
 
             </div>
             <div class="col-md-12 text-center">
@@ -145,7 +145,7 @@
         </div>
         <div class="row item-row border border-success">
             <div class="col-md-5 offset-md-1">
-                <img class="rounded project-pic img-responsive" src="assets/images/PublicTransportationSchedulerBG.PNG">
+                <img class="rounded project-pic img-fluid" src="assets/images/PublicTransportationSchedulerBG.PNG">
             </div>
             <div class="col-md-4 offset-md-1">
                 <h2>Public Transportation Scheduler</h2>
@@ -177,7 +177,7 @@
                 <h5><a href="https://github.com/ashalkey/GifTastic">Check out the code here!</a></h5>
             </div>
             <div class="col-md-4 offset-md-1">
-                <img class="rounded project-pic img-responsive" src="assets/images/MartialArtsBackground.jpg">
+                <img class="rounded project-pic img-fluid" src="assets/images/MartialArtsBackground.jpg">
 
             </div>
             <div class="col-md-12 text-center">
@@ -190,7 +190,7 @@
         </div>
         <div class="row item-row border border-success">
             <div class="col-md-5 offset-md-1">
-                <img class="rounded project-pic img-responsive" src="assets/images/MMA-Silhouette.png">
+                <img class="rounded project-pic img-fluid" src="assets/images/MMA-Silhouette.png">
             </div>
             <div class="col-md-4 offset-md-1">
                 <h2>Martial Arts Origins Trivia Game</h2>
@@ -221,7 +221,7 @@
                 <h5><a href="https://github.com/ashalkey/Word-Guess-Game">Check out the code here!</a></h5>
             </div>
             <div class="col-md-4 offset-md-1">
-                <img class="rounded project-pic img-responsive" src="assets/images/BruceLee.jpg">
+                <img class="rounded project-pic img-fluid" src="assets/images/BruceLee.jpg">
 
             </div>
             <div class="col-md-12 text-center">
