--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
                 <h5><a href="https://github.com/ashalkey/Lava-Survivor">Check out the code or clone the project to download
                         the .exe file to play the game here!</a></h5>
             </div>
-            <div class="col-md-4 offset-md-1">
-                <iframe width="654" height="380" src="https://www.youtube.com/embed/brCyfAqC_F8" frameborder="0" allow="autoplay; encrypted-media"
+            <div class="col-md-4 offset-md-1 embed-responsive embed-responsive-21by9">
+                <iframe class="embed-responsive-item" width="654" height="380" src="https://www.youtube.com/embed/brCyfAqC_F8" frameborder="0" allow="autoplay; encrypted-media"
                     allowfullscreen></iframe>
 
             </div>
