fixing case sensitivity issue on image

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
                 <h5><a href="https://github.com/ashalkey/fridge-to-table">Check out the code here!</a></h5>
             </div>
             <div class="col-md-5 offset-md-1">
-                <img class="rounded project-pic img-fluid" src="assets/images/Fridge-To-Table.png">
+                <img class="rounded project-pic img-fluid" src="assets/images/Fridge-To-Table.PNG">
 
             </div>
             <div class="col-md-12 text-center">
