fixing typo in project description

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <h2>Lava Survivor</h2>
                 <p>This game is a 3D platformer where you must shoot projectiles in order to move platforms to collect
                     all
-                    of the objects. You must choose wisely and quickly need to avoid being consumed by the rising lava!
+                    of the objects. You must choose wisely and quickly to avoid being consumed by the rising lava!
                 </p>
                 <h4>Technologies Used</h4>
                 <p>C# and the Unity Game Engine. World machine was also used to create the terrain that contains the
