--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <div class="text-center">
                     <img class="img-responsive rounded-circle profile-pic" src="assets/images/ProfilePic.jpg">
                     <h1>Alan Shalkey</h1>
-                    <h3>Full Stack Web Developer | C# Developer</h3>
+                    <h3>Full Stack Developer</h3>
                     <ul class="list-inline">
                         <li class="list-inline-item"><a href="https://www.linkedin.com/in/alan-shalkey-39590bb7/">LinkedIn</a></li>|
                         <li class="list-inline-item"><a href="https://github.com/ashalkey">Github</a></li>|
